createLifeFood, createDeathFood, createBonusFood (not working), livesDisplay, scoreDisplay

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <div id="snake-start">Start</div>
             <div id="snake-renew">New Game</div>
         </div>
+        <div id="lives-display">
+            Lives: 3
+        </div>
+        <div id="score-display">
+            Score: 0
+        </div>
     </div>
 </body>
 </html>
